midiparse: mention fluiddec instead of fluidsynth

The element name is actually fluiddec even if it uses fluidsynth.

https://bugzilla.gnome.org/show_bug.cgi?id=738223